// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match styles 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.3333333333333333;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #cd2f83;
  border-radius: 8px;
  color: #cd2f83;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  outline: none;
  padding: 1.2rem 2.4rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transition: top 0ms ease-out;
  transition: top 0ms ease-out;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0 0.4rem 0.8rem;
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  border-color: #94225f;
  color: #94225f;
  top: 0.2rem;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  box-shadow: 0 0 0 0.4rem #f5bbda;
}

.emotion-0 .Nautilus-navigationIcon--animated {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  border-color: #94225f;
  color: #94225f;
}

<button
  class="emotion-0"
  type="button"
>
  Hello
</button>
`;

exports[`Button should not give a manually set leadingIcon a "Nautilus-navigationIcon--animated" class 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.3333333333333333;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #cd2f83;
  border-radius: 8px;
  color: #cd2f83;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  outline: none;
  padding: 1.2rem 2.4rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transition: top 0ms ease-out;
  transition: top 0ms ease-out;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 1.6rem;
  margin: 0 0.4rem 0.8rem;
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  border-color: #94225f;
  color: #94225f;
  top: 0.2rem;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  box-shadow: 0 0 0 0.4rem #f5bbda;
}

.emotion-0 .Nautilus-navigationIcon--animated {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  border-color: #94225f;
  color: #94225f;
}

.emotion-0:hover .Nautilus-navigationIcon--animated {
  -webkit-transform: translateX(-0.4rem);
  -moz-transform: translateX(-0.4rem);
  -ms-transform: translateX(-0.4rem);
  transform: translateX(-0.4rem);
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

.emotion-1 {
  display: inline-block;
  line-height: 0;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  margin-right: 0.4rem;
}

.emotion-2 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  opacity: 0.8;
  stroke: currentColor;
}

<a
  class="emotion-0"
  href="/foo.zip"
>
  <span
    class="Nautilus-navigationIcon Nautilus-Icon--download emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24"
      id="test-button"
      role="img"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="7 10 12 15 17 10"
        />
        <line
          x1="12"
          x2="12"
          y1="15"
          y2="3"
        />
      </g>
    </svg>
  </span>
  Download
</a>
`;

exports[`Button should not give a manually set trailingIcon a "Nautilus-navigationIcon--animated" class 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.3333333333333333;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #cd2f83;
  border-radius: 8px;
  color: #cd2f83;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  outline: none;
  padding: 1.2rem 2.4rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transition: top 0ms ease-out;
  transition: top 0ms ease-out;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-right: 1.6rem;
  margin: 0 0.4rem 0.8rem;
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  border-color: #94225f;
  color: #94225f;
  top: 0.2rem;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  box-shadow: 0 0 0 0.4rem #f5bbda;
}

.emotion-0 .Nautilus-navigationIcon--animated {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  border-color: #94225f;
  color: #94225f;
}

.emotion-0:hover .Nautilus-navigationIcon--animated {
  -webkit-transform: translateX(0.4rem);
  -moz-transform: translateX(0.4rem);
  -ms-transform: translateX(0.4rem);
  transform: translateX(0.4rem);
  -webkit-transition: all 200ms linear;
  transition: all 200ms linear;
}

.emotion-1 {
  display: inline-block;
  line-height: 0;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  margin-left: 0.4rem;
}

.emotion-2 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  opacity: 0.8;
  stroke: currentColor;
}

<a
  class="emotion-0"
  href="/foo.zip"
>
  Download
  <span
    class="Nautilus-navigationIcon Nautilus-Icon--download emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24"
      id="test-button"
      role="img"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.75"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="7 10 12 15 17 10"
        />
        <line
          x1="12"
          x2="12"
          y1="15"
          y2="3"
        />
      </g>
    </svg>
  </span>
</a>
`;

exports[`Button should not output styles when unstyled is set 1`] = `
<div>
  <button
    class="emotion-0"
    type="button"
  >
    hello
  </button>
</div>
`;

exports[`Button should not output styles when unstyled is set, even with styling props 1`] = `
.emotion-1 {
  display: inline-block;
  line-height: 0;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  margin-right: 0.4rem;
}

.emotion-2 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  opacity: 0.8;
  stroke: currentColor;
}

<div>
  <button
    class="emotion-0"
    type="button"
  >
    <span
      class=" Nautilus-Icon--x-octagon emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
        fill="none"
        height="24"
        id="unstyled-button"
        role="img"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <polygon
            points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </g>
      </svg>
    </span>
    hello
  </button>
</div>
`;

exports[`Button should show danger styles 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.3333333333333333;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #8a0000;
  border-radius: 8px;
  color: #8a0000;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  outline: none;
  padding: 1.2rem 2.4rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transition: top 0ms ease-out;
  transition: top 0ms ease-out;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 1.6rem;
  margin: 0 0.4rem 0.8rem;
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  border-color: #630000;
  color: #630000;
  top: 0.2rem;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  box-shadow: 0 0 0 0.4rem #e2b6b6;
}

.emotion-0 .Nautilus-navigationIcon--animated {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  border-color: #630000;
  color: #630000;
}

.emotion-1 {
  display: inline-block;
  line-height: 0;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  margin-right: 0.4rem;
}

.emotion-2 {
  height: 2.4rem;
  stroke-width: 0.175rem;
  width: 2.4rem;
  opacity: 0.8;
  stroke: currentColor;
}

<div>
  <button
    class="emotion-0"
    type="button"
  >
    <span
      class=" Nautilus-Icon--x-octagon emotion-1"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
        fill="none"
        height="24"
        id="dangerous-button"
        role="img"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <polygon
            points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </g>
      </svg>
    </span>
    hello
  </button>
</div>
`;

exports[`Button shouldn't have a margin when \`noMargin\` is true 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.3333333333333333;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  border: 2px solid #cd2f83;
  border-radius: 8px;
  color: #cd2f83;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 0;
  outline: none;
  padding: 1.2rem 2.4rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  top: 0;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transition: top 0ms ease-out;
  transition: top 0ms ease-out;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.emotion-0::-moz-focus-inner {
  border: 0;
}

.emotion-0:active {
  border-color: #94225f;
  color: #94225f;
  top: 0.2rem;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
  box-shadow: 0 0 0 0.4rem #f5bbda;
}

.emotion-0 .Nautilus-navigationIcon--animated {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  border-color: #94225f;
  color: #94225f;
}

<button
  class="emotion-0"
  type="button"
>
  Hello
</button>
`;
